# kakao_mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/01-plan/: agentic-player-10-plan.md
docs/02-design/: why-moved.design.md
docs/03-submission/: playmcp-intro.md
docs/04-report/: why-moved.report.md
scripts/: capture_demos.py  mcp_client.py
src/why_moved/: __init__.py  config.py  context.py  server.py
src/why_moved/adapters/: corp_codes.py  dart.py  kind.py  market_data.py
src/why_moved/cache/: chart_store.py  store.py
src/why_moved/common/: envelope.py  errors.py
src/why_moved/engine/: charts.py  disclosure_templates.py  financial_extract.py  glossary.py  health_score.py  quiz.py  risk_rules.py  screener_parser.py  textviz.py
src/why_moved/tools/: daily_digest_tool.py  disclosure_quiz_tool.py  explain_disclosure_tool.py  insider_signal_tool.py  risk_check_tool.py  screen_stocks_tool.py  stock_health_tool.py  today_movers_tool.py  why_moved_tool.py
tests/: conftest.py  test_adapters.py  test_common.py  test_engine.py  test_quiz.py  test_risk_rules.py  test_server.py  test_tools.py  test_viz.py
webclient/: index.html  serve.py
