[project]
name = "why-moved"
version = "0.1.0"
description = "왜움직여? — 주식 초보자를 위한 공시·시세 AI 통역 MCP 서버 (PlayMCP AGENTIC PLAYER 10)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.scripts]
why-moved = "why_moved.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/why_moved"]
